updated dockerfile downloads path

--- a/docker-compose.atm8.yaml
+++ b/docker-compose.atm8.yaml
@@ -28,7 +28,7 @@ services:
     restart: unless-stopped
     volumes:
       - data:/data
-      - ../downloads:/downloads
+      - ./downloads:/downloads
   # Since Docker's default volume driver creates volumes owned by root, this
   # init container will change ownership to match final UID of mc service, above
   init-filebrowser:
